推荐数据接口的对接显示

--- a/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/CollectionNormalCell.xib
+++ b/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/CollectionNormalCell.xib
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,17 +18,20 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_live_cate_normal" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-hu-rPn">
+                        <rect key="frame" x="0.0" y="158" width="14" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="14" id="I5A-7x-jsx"/>
                             <constraint firstAttribute="height" constant="14" id="WEv-N0-wbL"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小码哥IT教育" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brv-k6-ZdL">
+                        <rect key="frame" x="19" y="158.5" width="229" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Img_default" translatesAutoresizingMaskIntoConstraints="NO" id="dn0-5Q-wPP">
+                        <rect key="frame" x="0.0" y="0.0" width="253" height="153"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="5"/>
@@ -34,11 +40,13 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小码哥IT教育" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HL5-Cd-Nrf">
+                        <rect key="frame" x="5" y="134.5" width="66.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sji-4f-qai">
+                        <rect key="frame" x="181" y="132" width="67" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="6666在线" image="Image_online"/>
                     </button>
@@ -60,6 +68,12 @@
                 <constraint firstItem="y5w-hu-rPn" firstAttribute="centerY" secondItem="brv-k6-ZdL" secondAttribute="centerY" id="rah-X5-7jL"/>
             </constraints>
             <size key="customSize" width="253" height="182"/>
+            <connections>
+                <outlet property="iconImageView" destination="dn0-5Q-wPP" id="AWU-0I-lMM"/>
+                <outlet property="nickNameLabel" destination="brv-k6-ZdL" id="Yun-SC-KoT"/>
+                <outlet property="onlineBtn" destination="Sji-4f-qai" id="AKp-IG-3lm"/>
+                <outlet property="roomNameLabel" destination="HL5-Cd-Nrf" id="23R-q6-lpe"/>
+            </connections>
             <point key="canvasLocation" x="332.5" y="294"/>
         </collectionViewCell>
     </objects>
