--- a/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/CollectionPrettyCell.xib
+++ b/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/CollectionPrettyCell.xib
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,6 +18,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TwJ-xd-ifJ">
+                        <rect key="frame" x="0.0" y="191" width="46" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="5UN-en-9gi"/>
                         </constraints>
@@ -24,6 +28,7 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小码哥IT教育" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIX-ov-yCt">
+                        <rect key="frame" x="0.0" y="170" width="177" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="iYn-84-mt6"/>
                         </constraints>
@@ -32,6 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="live_cell_default_phone" translatesAutoresizingMaskIntoConstraints="NO" id="qEu-2d-2KC">
+                        <rect key="frame" x="0.0" y="0.0" width="182" height="165"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="5"/>
@@ -40,6 +46,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbh-QX-MoV">
+                        <rect key="frame" x="114" y="8" width="60" height="20"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="CtT-Oa-TbH"/>
@@ -72,6 +79,12 @@
                 <constraint firstItem="lIX-ov-yCt" firstAttribute="top" secondItem="qEu-2d-2KC" secondAttribute="bottom" constant="5" id="x5N-2N-Mzj"/>
             </constraints>
             <size key="customSize" width="182" height="215"/>
+            <connections>
+                <outlet property="cityBtn" destination="TwJ-xd-ifJ" id="Gnz-aE-EVu"/>
+                <outlet property="iconImageView" destination="qEu-2d-2KC" id="3rj-6h-9Sh"/>
+                <outlet property="nickNameLabel" destination="lIX-ov-yCt" id="YF8-WC-ypl"/>
+                <outlet property="onlineBtn" destination="gbh-QX-MoV" id="HEg-2s-rLL"/>
+            </connections>
             <point key="canvasLocation" x="311" y="246.5"/>
         </collectionViewCell>
     </objects>
