--- a/MXDouYuZhiBo/MXDouYuZhiBo/Classes/View/MXCycleCollectionView/MXCycleCollectionViewCell.xib
+++ b/MXDouYuZhiBo/MXDouYuZhiBo/Classes/View/MXCycleCollectionView/MXCycleCollectionViewCell.xib
@@ -18,7 +18,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tta-TV-2dO">
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p09-4s-Qzb">
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -44,6 +44,7 @@
             <size key="customSize" width="299" height="136"/>
             <connections>
                 <outlet property="bannerImageView" destination="sWF-g7-MJ6" id="QBB-Zn-THk"/>
+                <outlet property="bannerTitleLabel" destination="p09-4s-Qzb" id="MwZ-sj-mVk"/>
             </connections>
             <point key="canvasLocation" x="-138.5" y="10"/>
         </collectionViewCell>
