--- a/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/MXAmuseTopView.xib
+++ b/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/MXAmuseTopView.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -47,6 +47,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="collectionView" destination="Ua4-hl-XUR" id="aCf-rq-VF6"/>
+                <outlet property="flowLayout" destination="ikb-4v-hAr" id="8Ui-D0-1rj"/>
                 <outlet property="pageControl" destination="1Ip-CW-0Gq" id="Sq0-d0-Aa2"/>
             </connections>
             <point key="canvasLocation" x="108" y="-137.5"/>
