--- a/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/MXCollectionViewCell.xib
+++ b/MXDouYuZhiBo/MXDouYuZhiBo/Classes/App/Home/View/MXCollectionViewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,12 +20,15 @@
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="abu-wr-tFv">
                         <rect key="frame" x="0.0" y="0.0" width="308" height="144"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2PO-Ni-QID">
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2PO-Ni-QID">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="-1" id="1mT-Bm-eol"/>
+                        </connections>
                     </collectionView>
                 </subviews>
             </view>
@@ -38,6 +41,7 @@
             <size key="customSize" width="308" height="144"/>
             <connections>
                 <outlet property="collectionView" destination="abu-wr-tFv" id="5p6-b7-WJ3"/>
+                <outlet property="flowLayout" destination="2PO-Ni-QID" id="5Hk-ba-qcW"/>
             </connections>
             <point key="canvasLocation" x="-12" y="56"/>
         </collectionViewCell>
